# server/app.js
@@ -11,6 +11,7 @@ const anonRoutes = require("./routes/anonRoutes");
 const chatRoutes = require("./routes/chatRoutes");
 const testRoutes = require("./routes/testRoutes");
 const feedbackRoutes = require("./routes/feedbackRoutes");
+const pageRoutes = require("./routes/pageRoutes");
 const {
   extractClientIp,
   extractVisitorId,
@@ -36,6 +37,7 @@ app.use("/api/captionize", captionRoutes);
 app.use("/api/anon", anonRoutes);
 app.use("/api/chats", chatRoutes);
 app.use("/api/feedback", feedbackRoutes);
+app.use("/api/pages", pageRoutes);
 
 // health check
 app.get("/api/health", (req, res) => {
